objects/bre__BR_Participation__c.object
<CustomObject>
    <fields>
        <fullName>bre__BR_Event__c</fullName>
        <label>BR Event</label>
        <referenceTo>bre__BR_Event__c</referenceTo>
        <relationshipName>BR_Participations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bre__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participations</relationshipLabel>
        <relationshipName>Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bre__Event_Start_Date__c</fullName>
        <formula>bre__BR_Event__r.bre__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bre__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Participations</relationshipLabel>
        <relationshipName>Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bre__Participate__c</fullName>
        <label>Participate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bre__TriggerSendReminderWorkflow__c</fullName>
        <defaultValue>true</defaultValue>
        <label>TriggerSendReminderWorkflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bre__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BR_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AC Participation</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Participation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>